refactored services to handle request body in character array